# vulna

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REVIEW_FIXES.md  SECURITY.md  VULNA_BUILD_PLAN Phases 1-16.md  VULNA_CODEX_BUILD_PLAN.md  VULNA_SELF_HOSTER_FIRST_ROADMAP_PHASES_17_32.md  docker-compose.dev.yml  docker-compose.single-host.yml  docker-compose.yml
dash/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
dash/backend/alembic/: env.py
dash/backend/alembic/versions/: 05c28372c891_phase_5_change_events.py  0b1c2d3e4f5a_scan_progress_observability.py  47dad75eb0a7_phase_11_controlled_pentest.py  5506b3eb7483_phase_7_cve_intelligence.py  5a655260d35d_phase_2_probes_and_enrollment_tokens.py  5fa1afe0d8e3_phase_19_onboarding_state_and_recovery_.py  7f2d80ee106f_phase_8_reports.py  834572a0ddd4_phase_12_workflow_runs.py  a1b2c3d4e5f6_phase_27_probe_result_uploads.py  a3b4c5d6e7f8_one_active_job_per_network.py  a5b6c7d8e9f0_phase_40_asset_context.py  a7b8c9d0e1f2_workflow_target_network.py  a8b9a84a342c_phase_4_scan_artifacts.py  a9b0c1d2e3f4_phase_35_revocable_sessions.py  ac042d545f26_phase_4_assets_and_services.py  ad1939b84d3a_phase_6_findings.py  b0c1d2e3f4a5_phase_36_mfa_webauthn.py  b2c3d4e5f6a7_phase_28_retention_holds.py  b4c5d6e7f8a9_pentest_session_target.py  b6c7d8e9f0a1_phase_41_explainable_risk.py  b8c9d0e1f2a3_scan_schedules.py  c1d2e3f4a5b6_phase_37_sso.py  c3d4e5f6a7b8_phase_29_notifications.py  c5d6e7f8a9b0_pentest_cleanup_verified.py  c7d8e9f0a1b2_phase_42_authenticated_inventory.py  c9d0e1f2a3b4_retire_standalone_scopes.py  ce35fd2a15f8_initial_auth_and_inventory_schema.py  cve1prod2idx3_cve_product_index.py  d0e1f2a3b4c5_scan_job_network.py  d1e5a28397c7_phase_3_scan_jobs.py  d2e3f4a5b6c7_phase_38_scim.py  d4e5f6a7b8c9_phase_16_relays.py  d6e7f8a9b0c1_relay_tunnel_address.py  d8e9f0a1b2c3_phase_43_sla_ticketing.py  e1bac3e00289_phase_10_remediation_and_verification.py  e1f2a3b4c5d6_pentest_session_dispatch.py  e3f4a5b6c7d8_phase_39_authorization.py  e5f6a7b8c9d0_evidence_encryption.py  e7f8a9b0c1d2_phase_33_experience_profiles.py  e9f0a1b2c3d4_phase_44_passive_inventory_core.py  (+11 more)
dash/backend/app/: __init__.py  cli.py  main.py
dash/backend/app/api/: __init__.py  context.py  probe_auth.py  relay_auth.py  scim.py
dash/backend/app/api/v1/: __init__.py  analytics.py  asset_context.py  assets.py  audit.py  auth.py  authorization.py  changes.py  credentials.py  cve.py  dashboard.py  demo.py  diagnostics.py  feeds.py  findings.py  help.py  jobs.py  maintenance.py  mfa.py  networking.py  networks.py  notifications.py  onboarding.py  organizations.py  passive_inventory.py  pentest.py  portability.py  presets.py  privacy.py  probes.py  relays.py  report_templates.py  reports.py  resources.py  risk.py  (+13 more)
dash/backend/app/auth/: __init__.py  dependencies.py  password.py  permission_catalog.py  site_scope.py  tokens.py
dash/backend/app/core/: __init__.py  config.py
dash/backend/app/db/: __init__.py  base.py  mixins.py  session.py
dash/backend/app/intelligence/: __init__.py  epss.py  fetchers.py  kev.py  matching.py  nvd.py
dash/backend/app/models/: __init__.py  asset.py  asset_context.py  audit.py  authorization.py  background_task.py  change_event.py  credential.py  cve.py  enrollment_token.py  enums.py  feed_health.py  finding.py  finding_note.py  mfa.py  network.py  network_scope.py  notification.py  onboarding.py  organization.py  passive_inventory.py  pentest_session.py  probe.py  probe_result_upload.py  relay.py  report.py  retention_hold.py  risk.py  risk_acceptance.py  rules_of_engagement.py  scan_artifact.py  scan_job.py  scan_job_attempt.py  scan_schedule.py  scim.py  service.py  session.py  site.py  sla.py  software.py  (+5 more)
dash/backend/app/schemas/: __init__.py  asset.py  audit.py  auth.py  authorization.py  background_task.py  change_event.py  common.py  credential.py  enrollment.py  finding.py  intelligence.py  job.py  mfa.py  network.py  onboarding.py  organization.py  passive_inventory.py  pentest.py  presets.py  probe.py  report.py  risk.py  risk_acceptance.py  schedule.py  scim.py  scope.py  session.py  site.py  sla.py  software.py  sso.py  system.py  ticketing.py  user.py  workflow.py
dash/backend/app/services/: __init__.py  account_tokens.py  analytics.py  asset_context.py  audit.py  auth_throttle.py  authorization.py  background_tasks.py  bootstrap.py  ca.py  capabilities.py  credentials.py  cve_correlation.py  dashboard.py  demo.py  diagnostics.py  endpoint_release.py  enrollment.py  evidence.py  evidence_crypto.py  experience.py  export.py  findings.py  health.py  help_topics.py  ingest.py  intelligence.py  inventory_active_directory.py  inventory_aws.py  inventory_azure.py  inventory_csv.py  inventory_dhcp.py  inventory_dns.py  inventory_entra.py  inventory_generic_api.py  inventory_google_cloud.py  inventory_proxmox.py  inventory_unifi.py  inventory_vcenter.py  inventory_xcpng.py  (+49 more)
dash/backend/app/tasks/: __init__.py  handlers.py  runner.py
dash/backend/app/workflows/: __init__.py
dash/backend/tests/: conftest.py  test_asset_context.py  test_assets.py  test_audit_integrity.py  test_auth.py  test_authenticated_inventory.py  test_authorization.py  test_background_task_migration.py  test_background_tasks.py  test_backup_center.py  test_bootstrap.py  test_ca.py  test_changes.py  test_config.py  test_cve_correlation.py  test_cve_product_index_migration.py  test_demo.py  test_diagnostics.py  test_enrollment.py  test_everyday_ux.py  test_evidence_crypto.py  test_experience.py  test_explainable_risk.py  test_feeds_api.py  test_finding_parsers.py  test_finding_rescan.py  test_findings.py  test_governance_migration.py  test_health.py  test_help_and_docs.py  test_intelligence_parsers.py  test_intelligence_sync.py  test_inventory_active_directory.py  test_inventory_aws.py  test_inventory_azure.py  test_inventory_csv.py  test_inventory_dhcp.py  test_inventory_dns.py  test_inventory_entra.py  test_inventory_generic_api.py  (+75 more)
(+483 files in other folders)
