[project]
name = "vulna-dash-backend"
version = "0.1.0"
description = "VulnaDash — central orchestrator API for the Vulna security-assessment platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Vulna maintainers" }]

# Dependencies are pinned to compatible major versions per the build plan.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "email-validator>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<0.31",
    "argon2-cffi>=23.1,<24.0",
    "pyjwt>=2.10,<3.0",
]

[project.scripts]
vulna = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<0.26",
    "httpx>=0.28,<0.29",
    "aiosqlite>=0.20,<0.21",
    "ruff>=0.9,<0.10",
    "mypy>=1.14,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# Sensible, security-conscious default rule set.
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM"]
# S101 (assert) is fine in tests; handled per-file below.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests use asserts and constant "passwords"/tokens for fixtures.
"tests/*" = ["S101", "S105", "S106"]
# Alembic revisions are autogenerated; long constraint lines are expected.
"alembic/versions/*" = ["E501", "W291"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these callables in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
