[project]
name = "vulna-dash-backend"
version = "0.1.0"
description = "VulnaDash — central orchestrator API for the Vulna security-assessment platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Vulna maintainers" }]

# Dependencies are pinned to compatible major versions per the build plan.
dependencies = [
    # Versions kept current with security advisories (Phase 15 dependency scan).
    "fastapi>=0.139,<1.0",
    # Pinned explicitly (FastAPI's floor is open) to a version clear of advisories.
    "starlette>=1.3.1,<2.0",
    "uvicorn[standard]>=0.34,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "email-validator>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.2",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "argon2-cffi>=23.1,<26.0",
    "pyjwt>=2.10,<3.0",
    "cryptography>=49.0,<50.0",
    # Phase 36: RFC 6238 TOTP and maintained server-side WebAuthn verification.
    "pyotp>=2.10,<3.0",
    "webauthn>=3.0,<4.0",
    # Phase 37: standards-based OIDC and SAML service-provider flows.
    "Authlib>=1.7,<2.0",
    "python3-saml>=1.16,<2.0",
    "defusedxml>=0.7,<0.8",
    # Phase 44: asynchronous, TSIG-authenticated authoritative zone transfers.
    "dnspython>=2.8,<3.0",
    # Phase 44: read-only, TLS-verified Active Directory LDAP inventory.
    "ldap3>=2.9.1,<2.10",
    # Phase 44: maintained AWS Signature Version 4 primitives. Vulna retains
    # control of DNS pinning, response bounds, and provider endpoint selection.
    "botocore>=1.43,<2.0",
    # Runtime HTTP client for VulnaWatch feed syncs (Phase 7).
    "httpx>=0.28,<1.0",
    # Pure-Python PDF generation for reports (Phase 8) — no system libraries,
    # so it builds cleanly in CI and on the appliance.
    "fpdf2>=2.8,<3.0",
]

[project.scripts]
vulna = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=1.0,<2.0",
    "aiosqlite>=0.20,<1.0",
    "ruff>=0.9,<0.14",
    "mypy>=1.14,<2.0",
    "types-defusedxml>=0.7,<0.8",
    "pip-audit>=2.7,<3.0",
    "jsonschema>=4.20,<5.0",
]

[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# Sensible, security-conscious default rule set.
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM"]
# S101 (assert) is fine in tests; handled per-file below. UP046/UP047 propose
# PEP 695 (`class C[T]`, `def f[T]`) syntax; adoption is deferred for now.
ignore = ["UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
# Tests use asserts and constant "passwords"/tokens for fixtures; conftest must
# set environment variables before importing the application (E402).
"tests/*" = ["S101", "S105", "S106", "E402"]
# Alembic revisions are autogenerated; long constraint lines are expected.
"alembic/versions/*" = ["E501", "W291"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these callables in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "release_gate: security-critical, release-blocking regression (Phase 32). A release cannot be promoted when any of these fail. Run with `deploy/release/release_gate.sh`.",
]
